# autonews-99

./: .env.example  .gitignore  README.md  config.py  main.py  requirements.txt  scrapers.py
.github/workflows/: news_monitor.yml
99minutos News v1.3/: README.md  VERSION.txt  backup.py  config.py  email_handler.py  keywords.py  main.py  requirements.txt  run_news.sh  run_once.py  scrapers.py  security_config.py  sent_titles.json  v1.1.code-workspace
99minutos News v1.3/output/: news_2025-03-18_18-44-20.json  news_2025-03-18_18-49-31.json  news_2025-03-18_18-52-36.json  news_2025-03-18_18-54-03.json  news_2025-03-18_18-54-48.json  news_2025-03-18_21-15-07.json  processed_articles_2025-03-18_22-44-02.json  processed_articles_2025-03-18_22-57-27.json  (+1 more)
Ninja_SAC/WOI/: .gitignore  (+4 more)
Ninja_SAC/WOI/woi-analyzer/: .dockerignore  Dockerfile  README.md  pyproject.toml  requirements.txt
Ninja_SAC/WOI/woi-analyzer/scripts/: seed_operational_context.py
Ninja_SAC/WOI/woi-analyzer/src/woi_analyzer/: __init__.py  business_hours.py  churn_detector.py  classifier.py  claude_client.py  cli.py  config.py  daily_batch.py  db.py  emoji_sentiment.py  eod_resolver.py  group_analyst.py  incident_reconstructor.py  kpi_snapshotter.py  logging_setup.py  media_analyzer.py  morning_briefing.py  scheduler.py  slack.py
Ninja_SAC/WOI/woi-analyzer/src/woi_analyzer/prompts/: classification_system.md  daily_summary.md  few_shot_examples.md  group_analysis.md  incident_summary.md  morning_briefing.md
Ninja_SAC/WOI/woi-reporter/: README.md  pyproject.toml  requirements.txt
Ninja_SAC/WOI/woi-reporter/src/woi_reporter/: __init__.py  cli.py  config.py  daily_report.py  queries.py  sheets_writer.py  slack_notifier.py
(+112 files in other folders)
