[project]
name = "woi-analyzer"
version = "1.0.0"
description = "WOI — pipeline de análisis Claude (Haiku clasificación + Sonnet ground-truth y resumen)"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "anthropic>=0.39.0",
    "supabase>=2.9.1",
    "psycopg[binary]>=3.2.3",
    "python-dotenv>=1.0.1",
    "pydantic>=2.9.2",
    "tenacity>=9.0.0",
    "structlog>=24.4.0",
    "pytz>=2024.2",
    "click>=8.1.7"
]

[project.scripts]
woi-analyze = "woi_analyzer.cli:main"
woi-scheduler = "woi_analyzer.scheduler:main"

[tool.hatch.build.targets.wheel]
packages = ["src/woi_analyzer"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 110
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]
